--- a/BKT_project/templates/index1.html
+++ b/BKT_project/templates/index1.html
@@ -534,6 +534,7 @@
             status.innerHTML = "uploading...."
             status.style.color = green;
             uploadFile();
+            await delay();
         }
         else {
             status.style.color = red;
@@ -755,3 +756,12 @@
 </script>
 
 </html>
+
+
+
+
+
+
+
+
+
