navbar theme button changed

--- a/BKT_project/templates/inv_cuts.html
+++ b/BKT_project/templates/inv_cuts.html
@@ -39,6 +39,9 @@
             </div>
             <div class="flex items-center">
                 <span id="dateTime" class="text-sm font-bold px-4">XXXX XXX XXX XXXXS XX X</span>
+                <button id="change_theme" class=" px-4 py-2 mx-2 rounded-2xl font-bold"
+                    > <img src="{{ url_for('static', filename='images/theme.svg') }}" alt="Logo"
+                    style="width: 30px; height: 35px;"></button>
             </div>
     </nav>
     <div class="mx-16 my-4">
