--- a/BKT_project/templates/inv_cuts.html
+++ b/BKT_project/templates/inv_cuts.html
@@ -14,25 +14,28 @@
 
 
 <body style="background-color: #000000; color: #fff0f0;">
-
+    <!-- Navbar -->
     <nav id="nav" class="fixed-top bg-blue-800 ">
         <div class="  flex justify-between items-center">
-            <a href="/"  class="flex items-center">
+            <a href="/" class="flex items-center">
                 <img src="{{ url_for('static', filename='images/logo_mq.jpg') }}" alt="Logo"
-                    style="width: 330px; height: 100%;" >
-                    <h1 class="text-xl font-bold mx-4">BKT:- Bias Cutter PRMS</h1>
+                    style="width: 330px; height: 100%;">
+                <h1 class="text-xl font-bold mx-4">BKT:- Bias Cutter PRMS</h1>
             </a>
-            
+
             <div class="flex space-x-8 pl-4">
                 <a href="{{ url_for('serve_home') }}">
-                    <button class="px-4 py-2 rounded-2xl hover:bg-gray-700   font-bold text-xl ">Recipe Schdule Upload & Report Generation</button></a>
+                    <button class="px-4 py-2 rounded-2xl hover:bg-gray-700   font-bold text-xl ">Recipe Schdule Upload &
+                        Report Generation</button></a>
                 <div class="flex space-x-4">
-                    
+
                     <a href="{{ url_for('serve_view_edit') }}">
-                        <button class="px-4 py-2 rounded-2xl hover:bg-gray-700  font-bold  text-xl ">View and Edit Recipe</button>
+                        <button class="px-4 py-2 rounded-2xl hover:bg-gray-700  font-bold  text-xl ">View and Edit
+                            Recipe</button>
                     </a>
                     <a href="{{ url_for('serve_inv_cuts')  }}">
-                        <button class="px-4 py-2 rounded-2xl bg-gray-700 hover:bg-gray-700  font-bold  text-xl  ">Add Inventory and manual Cuts</button>
+                        <button class="px-4 py-2 rounded-2xl bg-gray-700 hover:bg-gray-700  font-bold  text-xl  ">Add
+                            Inventory and manual Cuts</button>
                     </a>
                 </div>
 
@@ -41,6 +44,7 @@
                 <span id="dateTime" class="text-sm font-bold px-4">XXXX XXX XXX XXXXS XX X</span>
             </div>
     </nav>
+    <!-- upload inv cuts section -->
     <div class="mx-16 my-4">
         <h2 class="text-2xl font-bold text-blue-500">Upload Opening Inventory Cuts
 
@@ -49,14 +53,17 @@
         <form id="uploadForm">
             <input type="file" id="fileInput" accept=".xlsx" class="border-2 border-sky-500">
             <button type='button' id="uploadInvCutsXlsx"
-                class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Upload Inventory Cuts Excel
+                class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Upload
+                Inventory Cuts Excel
             </button>
-            <button type='button' id="syncInvCuts" class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Add
+            <button type='button' id="syncInvCuts"
+                class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Add
                 Inv Cuts to Production</button>
         </form>
 
 
     </div>
+    <!-- upload manual cuts section -->
     <div class="mx-16 my-4">
         <h2 class="text-2xl font-bold text-blue-500">Upload Manual Cuts
 
@@ -65,23 +72,27 @@
         <form id="uploadForm">
             <input type="file" id="fileInput_manual" accept=".xlsx" class="border-2 border-sky-500">
             <button type='button' id="uploadManualCutsXlsx"
-                class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Upload Manual Cuts Excel
+                class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Upload
+                Manual Cuts Excel
             </button>
-            <button type='button' id="syncManualCuts" class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Add
+            <button type='button' id="syncManualCuts"
+                class="mx-16  text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-2xl text-sm px-16 py-2.5 text-center me-2 mb-2 mt-4">Add
                 Manual Cuts to Report DB</button>
         </form>
 
 
     </div>
 
+    <div id="status"></div>
+
     <footer id="logs" class=" absolute bottom-0 flex flex-col items-start mx-4 my-8  border-2 border-sky-200 "
-    style="width: 99%; height: 20vh; overflow-y: auto;">
-    <h2 class="border-2 border-sky-200 w-full px-4 py-2 ">
-        System Logs:</h2>
-</footer>
-<div  class=" absolute bottom-0">
-    All Copyrights are reserved at  &copy; Multiquadrant Industrial Controls.
-</div>
+        style="width: 99%; height: 20vh; overflow-y: auto;">
+        <h2 class="border-2 border-sky-200 w-full px-4 py-2 ">
+            System Logs:</h2>
+    </footer>
+    <div class=" absolute bottom-0">
+        All Copyrights are reserved at &copy; Multiquadrant Industrial Controls.
+    </div>
 
 
 </body>
@@ -126,7 +137,7 @@
             document.querySelector("#status").innerHTML = "uploading...."
             document.querySelector("#status").style.color = '#17ff40';
             upload
-<!-- Upload xlsx -->File();
+            UploadFile();
             await delay();
 
         }
@@ -174,6 +185,7 @@
                     span.style.margin = '3px;';
                     logs.appendChild(span)
                     console.log("inside if")
+                    document.querySelector("#status").innerHTML = "->";
                 }
                 else {
                     const span = document.createElement('span');
@@ -196,7 +208,7 @@
             });
     }
 
-</script> 
+</script>
 
 <!-- sync inc cuts -->
 <script>
@@ -245,7 +257,7 @@
             span.textContent = " wrong password"
             document.querySelector('#logs').appendChild(span)
             await delay();
-            document.querySelector("#status").innerHTML ="->"
+            document.querySelector("#status").innerHTML = "->"
 
         }
     })
@@ -339,7 +351,7 @@
                     body: JSON.stringify({ 'password': pass })
                 });
                 const data = await response.json();
-                                                                                                
+                console.log(`response on sync_manual_cuts ${data}`)
                 const span = document.createElement('span');
                 if (data.error) {
                     span.textContent = `${data.timestamp} : ${data.message} ::-> ${data.error}`;
@@ -377,5 +389,3 @@
 </script>
 
 </html>
-
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
